fix layout bugs for twoLine type

--- a/src/css/blocks/lesson/equationNavigator.scss
+++ b/src/css/blocks/lesson/equationNavigator.scss
@@ -167,8 +167,9 @@
   text-align: center;
 }
 
+.lesson__eqn_nav__2lines__nextRow:hover,
 .lesson__eqn_nav__2lines__next__button:hover,
-.lesson__eqn_nav__2lines_prev__button:hover {
+.lesson__eqn_nav__2lines__prev__button:hover {
   color: color('diagram', 'disabled', 'lighter');
 }
 
